--- a/Kalara_Fixed/Assembly-CSharp.csproj
+++ b/Kalara_Fixed/Assembly-CSharp.csproj
@@ -39,10 +39,10 @@
 	<Reference Include="System.Core" />
 	<Reference Include="System.Xml.Linq" />
 	<Reference Include="UnityEngine">
-	  <HintPath>C:/Utilities/Working/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEngine.dll</HintPath>
 	</Reference>
 	<Reference Include="UnityEditor">
-	  <HintPath>C:/Utilities/Working/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
+	  <HintPath>C:/Program Files (x86)/Unity/Editor/Data/Managed/UnityEditor.dll</HintPath>
 	</Reference>
   </ItemGroup>
   <ItemGroup>
@@ -62,6 +62,7 @@
      <Compile Include="Assets\Scripts\StatSystem.cs" />
      <Compile Include="Assets\Scripts\TestBlob\BlobMovementStateMachine.cs" />
      <Compile Include="Assets\Scripts\TestBlob\Bubbles\RiseAndDestroy.cs" />
+     <Compile Include="Assets\Scripts\TestBlob\ReversedCameraDirection.cs" />
      <Compile Include="Assets\Scripts\Utils\MathEx.cs" />
      <Compile Include="Assets\Scripts\Utils\StateMachine.cs" />
   </ItemGroup>
